Fix spacing between income and expense on transactions view

--- a/src/app/components/Transactions.scss
+++ b/src/app/components/Transactions.scss
@@ -53,6 +53,9 @@ div.layout {
         background: rgba(170, 170, 170, 0.1);
         margin-bottom: 30px;
         padding-bottom: 10px;
+        .incomes_expenses {
+          p { margin-right: 10px;}
+        }
       }
     }
 
